fixes bug 316372 "mailto: links do not open Compose window anymore" patch by bzbarsky, r=biesi, sr=darin